--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "bcryptjs": "^2.4.3",
     "daisyui": "^2.46.1",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^2.3.3",
     "next": "13.1.1",
+    "next-connect": "^0.13.0",
+    "nprogress": "^0.2.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "postcss-preset-env": "^7.8.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
