--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "daisyui": "^2.46.1",
     "js-cookie": "^3.0.1",
@@ -22,7 +24,9 @@
     "pg-hstore": "^2.3.4",
     "postcss-preset-env": "^7.8.3",
     "react": "18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
