--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "daisyui": "^2.46.1",
+    "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
+    "leaflet": "^1.9.3",
     "mysql2": "^2.3.3",
     "next": "13.1.1",
     "next-connect": "^0.13.0",
@@ -23,10 +25,12 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "postcss-preset-env": "^7.8.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-axios": "^2.0.6",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.2",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
