--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
@@ -18,6 +19,7 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.9.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "next": "13.1.1",
     "next-connect": "^0.13.0",
@@ -31,6 +33,7 @@
     "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "react-toastify": "^9.1.1",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
