--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "daisyui": "^2.46.1",
@@ -26,6 +30,7 @@
     "nprogress": "^0.2.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "postcss": "^8.4.20",
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
@@ -36,8 +41,6 @@
     "react-toastify": "^9.1.1",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
